<resources>
    <string name="app_name">EatRight</string>
    <string name="edittext_username">Username</string>
    <string name="logo">Logo</string>
    <string name="name">Your Name</string>
    <string name="button_register">Sign Up</string>
    <string name="email">Your email</string>
    <string name="password">Your password</string>
    <string name="create_account">Create Account</string>
    <string name="edittext_password">Password</string>
    <string name="imageview_logo">logo</string>
    <string name="button_login">Login</string>
    <string name="textview_not_registered_yet">Not registered yet?</string>
    <string name="edittext_name">Name</string>
    <string name="edittext_email">Email</string>
    <string name="button_create_account">Create Account</string>

    <!-- Dummy line -->

    <!-- Fragment enter_base_info -->
    <string name="textview_initial_prompt">First, we need to get some general information about you.</string>
    <string name="button_next">Next</string>

    <!-- Fragment base_info -->
    <string name="radiobutton_female">Female</string>
    <string name="radiobutton_male">Male</string>
    <string name="radiobutton_gender_other">Prefer not to say</string>
    <string name="textview_select_gender">Please select your gender.</string>
    <string name="textview_enter_height">Enter your height.</string>
    <string name="edittext_height_feet">Feet</string>
    <string name="edittext_height_inches">Inches</string>
    <string name="textview_enter_weight">Enter your weight.</string>
    <string name="edittext_weight_in_pounds">Lbs</string>

    <!-- Placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- activity_birthday -->
    <string name="select_birthday">Select your birthday.</string>

    <!-- Fragment prompt goals -->
    <string name="textview_goals_prompt">Next, we want to learn how to help you. What is your goal?</string>
    <string name="radiobutton_lose_weight">Lose Weight</string>
    <string name="radiobutton_maintain_weight">Maintain Weight</string>
    <string name="radiobutton_gain_weight">Gain Weight</string>

    <!-- Fragment Calculate Goals -->
    <string name="textview_enter_goal_weight">Enter your goal weight.</string>
    <string name="textview_goal_time">How fast would you like to lose the weight?</string>
    <string name="radiobutton_2week">2 lbs. per week</string>
    <string name="radiobutton_1week">1 lbs. per week (recommended)</string>
    <string name="radiobutton_half_week">0.5 lbs. per week</string>

    <!-- Fragment Activity Level -->
    <string name="textview_activity_level">Last step! Choose your activity level!</string>
    <string name="radiobutton_not_active">Not very active (0 to 6000 steps/day)</string>
    <string name="radiobutton_slightly_active">Slightly active (6000 to 8000 steps/day)</string>
    <string name="radiobutton_active">Active (8000 to 10000 steps/day)</string>
    <string name="radiobutton_very_active">Very active (10000 or more steps/day)</string>
    <string name="button_calculate">Next</string>

    <!-- Fragment Goals Calculated -->
    <string name="button_start_tracking">Start tracking!</string>
    <string name="button_recalculate">Recalculate</string>

    <!-- Activity_home -->
    <string name="calories_remaining">Calories Remaining:</string>
    <string name="calorie_breakdown">Goal - Consumed = Remaining</string>
    <string name="Dummy_text">2000 - 534 = 1466</string>
    <string name="button_home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="breakfast">Breakfast</string>
    <string name="default_food">Enter food to be displayed here.</string>
    <string name="add">+</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="goodnews">Good news!</string>
    <string name="calculated">Your calculated calories are:</string>

    <!-- Profile Page -->
    <string name="gender">Gender:</string>
    <string name="birthdate">Birthdate:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="goal">Goal:</string>
    <string name="update_weight">Update Weight</string>
    <string name="update_profile">Update Profile</string>
    <string name="save">Save</string>
    <string name="note_update_weight">**Updating weight will change your goal calories**</string>

    <!-- HelpActivity Page -->
    <string name="question_mark">\?</string>
    <string name="what_is_eatright">What is EatRight?</string>
    <string name="about_eatRight">\t\tEatRight is a mobile application created by students of Troy University. It was created with the idea of making healthy eating fun and helping people just like you to accomplish their goals.</string>
    <string name="help1">How can EatRight help me?</string>
    <string name="help1_1">\t\tBy entering your gender, age, height, weight, and goal, EatRight calculates how many calories you should consume per day to meet your goal in the healthiest timeline possible.</string>
    <string name="help2">How does EatRight calculate the calories I need?</string>
    <string name="help2_2">\t\tEatRight uses the standard Basal Metabolic Rate formula to determine the recommended calories specific to your body.</string>
    <string name="help3">Is EatRight safe?</string>
    <string name="help3_3">\t\tAbsolutely! We only provide calorie goals that are proven to help you achieve your goal in a safe amount of time. The recommended weight loss or gain rate is 1 pound per week - this is what we follow.</string>
    <string name="help4">How do I use EatRight?</string>
    <string name="help4_4">\t\tAfter completing the profile building process, you are given a recommended daily caloric intake. You can then search or scan foods you consume to view their caloric and nutritional values. Once you have found the food you are looking for, you can add it to your daily log, which updates to show the rest of the calories you are able to consume in the day.</string>
    <string name="custom_food">Custom Food</string>
    <string name="create_food_prompt">To create your own food, please fill in the blanks below.</string>
    <string name="custom_name">Food name:</string>
    <string name="type_here">Type here</string>
    <string name="calories">Calories:</string>
    <string name="protein">Protein:</string>
    <string name="fat">Fat:</string>
    <string name="carbs">Carbs:</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>

</resources>
