<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:layout_gravity="center_horizontal">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="289dp"
        android:layout_height="275dp"
        android:contentDescription="@string/imageview_logo"
        app:srcCompat="@drawable/launcherlogo"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_enter_goal_weight"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_weight_in_pounds"
        android:layout_gravity="center_horizontal"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_goal_time"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textAlignment="center"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radio2lbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_2week"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radio1lbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_1week"
            android:textSize="18sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_half_lbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_half_week"
            android:textSize="18sp"/>
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="140dp"/>


</LinearLayout>