<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sred.eatright.Main2Activity"
    style="@style/background_color">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageview_logo"
        app:srcCompat="@drawable/launcherlogo" />

    <EditText
        android:id="@+id/edittext_username"
        style="@style/input_style"
        android:hint="@string/edittext_username"
        android:importantForAutofill="no"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@color/text_background"
        android:hint="@string/edittext_password"
        android:textColor="@color/text_color"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_login"
        android:textColor="@color/text_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/textview_not_registered_yet"/>
    </LinearLayout>


</LinearLayout>
