<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".userInfo.GetGoalActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            style="@style/logo_style"
            android:contentDescription="@string/imageview_logo"
            android:src="@drawable/launcherlogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/textview_goals_prompt"
            android:textAlignment="center"
            android:textSize="30sp" />

        <!-- Asks user what their goal is -->
        <RadioGroup
            android:id="@+id/radioGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp">

            <RadioButton
                android:id="@+id/radioLose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radiobutton_lose_weight"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioMaintain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_maintain_weight"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioGain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_gain_weight"
                android:textSize="18sp" />

        </RadioGroup>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="25dp"
            android:text="@string/button_next" />

    </LinearLayout>

</FrameLayout>
