<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    style="@style/background_color"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="289dp"
            android:layout_height="275dp"
            app:srcCompat="@drawable/launcherlogo"
            android:contentDescription="@string/logo"/>

        <!-- Name Entry -->
        <EditText
            android:id="@+id/enter_name"
            style="@style/input_style"
            android:layout_width="301dp"
            android:layout_height="35dp"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <!--Email Entry -->
        <EditText
            android:id="@+id/enter_email"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <!-- Password entry -->
        <EditText
            android:id="@+id/enter_password"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <!-- Signup Button -->
        <Button
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/create_account"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>
</ScrollView>
