<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView"
        style="@style/logo_style"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imageview_logo"
        android:src="@drawable/launcherlogo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/calculated"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <!-- Enter calculated calories here -->

    <TextView
        android:id="@+id/user_goal_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="50dp" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="75dp"/>


</LinearLayout>