<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/launcherlogo"
        android:contentDescription="@string/imageview_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"/>

            <!-- Insert data binding names from DB -->
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="5dp"/>

            <!-- Insert user email -->
            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <!-- Insert user gender -->
            <TextView
                android:id="@+id/user_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

            <!-- Insert user DOB -->
            <TextView
                android:id="@+id/user_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="5dp"/>

            <!-- Insert user height Feet -->
            <TextView
                android:id="@+id/user_heightFeet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>

            <!-- Insert user height Inches -->
            <TextView
                android:id="@+id/user_heightInches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"/>

            <!-- Insert user current weight -->
            <TextView
                android:id="@+id/user_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"/>

            <!-- Insert user current weight -->
            <TextView
                android:id="@+id/user_current_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>